--- a/css/main.css
+++ b/css/main.css
@@ -775,7 +775,7 @@ button:focus {
     display: block;
     width: 12px;
     height: 12px;
-    margin: 5px 7px;
+    margin: 10px;
     filter: Alpha(Opacity=50);
     opacity: 0.5;
     -webkit-border-radius: 20px;
