--- a/css/main.css
+++ b/css/main.css
@@ -523,8 +523,18 @@ button:focus {
     .hero-area .intro-img img {
       display: block;
       height: auto;
-      max-width: 100%; }
+      max-width: 100%;
+      animation: MoveUpDown 5s linear infinite;
+    }
 
+    @keyframes MoveUpDown {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-50px);
+      }
+    }
 /* ==========================================================================
    About 
    ========================================================================== */
